fixes badge trophies view bug

--- a/app/views/badges/_trophies.html.erb
+++ b/app/views/badges/_trophies.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
+
 	<% if @user.badge %>
+
 		<div class="col s2 card">
 			<% if @user.badge.initiated == true %>
   			<div class="card-content">
@@ -82,6 +84,8 @@
     	<% end %>
     </div>
 
+  </div>
+  <div class="row">
 
 		<div class="col s2 card">
 			<% if @user.badge.codebae == true %>
@@ -155,7 +159,7 @@
           <span class="card-title">Extrovert</span>
           <%= image_tag("extrovert.png", :alt => "Extrovert", class: "trophy-image") %>
           <p>
-          	Blessed are the noobs, for they shall inherit the class.
+          	You wanna join my primitive noise band?
           </p>
       	</div>
 			<% else %>
@@ -170,6 +174,8 @@
     	<% end %>
     </div>
 
+  </div>
+  <div class="row">
 
 		<div class="col s2 card">
 			<% if @user.badge.seeker == true %>
@@ -199,7 +205,7 @@
           <span class="card-title">Dunce . . .</span>
           <%= image_tag("dunce.png", :alt => "Dunce", class: "trophy-image") %>
           <p>
-          	A 4-dimensional bubble casts a 3-dimensional shadow! 
+          	You're a buff baby who can dance like a man! 
           </p>
       	</div>
 			<% else %>
@@ -243,7 +249,7 @@
           <span class="card-title">Helpful</span>
           <%= image_tag("sharkbun.png", :alt => "Shark and Rabbit Fight", class: "trophy-image") %>
           <p>
-          	Blessed are the noobs, for they shall inherit the class.
+          	Oh crab it to the butternuts, you are lending hands to everyone!
           </p>
       	</div>
 			<% else %>
