--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 		            <%= form_tag(search_index_path, method: 'get') do %>
                 	<%= text_field_tag :search, params[:search], :autocomplete => :on, :id => 'search', type: 'search', placeholder: "Seach by Tag" %>
               	<% end %>
-		            <label for="search"><i class="material-icons">search</i></label>
+		            <label for="search"><i class="material-icons left">search</i></label>
 		            </div>
 		          <!-- </form>searchit -->
 		        </div>
