--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -20,9 +20,8 @@
 						  <% answer.tag_list.each do |tag| %>
 								<div class="chip">
 									<%= tag %>
-
       						<% if answer.user == current_user %>
-        						<i class="close material-icons close_question_tag" data-question-id="<%= answer.id%>">close</i>
+        						<i class="close material-icons close_tag" data-answer-id="<%= answer.id%>">close</i>
     						  <% end %>
 							  </div>
 						  <% end %>
