--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -4,6 +4,7 @@
 				<%= f.text_field :title, placeholder: 'Title', class: "title" %>
 				<%= f.text_area :content, placeholder: 'Content', class: 'content' %>
 				<%= f.text_field :tag_list, value: f.object.tag_list.to_s, placeholder: 'Tags' %>
-				<%= f.submit %>
+				<%= f.submit class: "waves-effect waves-light btn" %>
 			<% end %>
+			<br>
 		</div>
