--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -165,7 +165,7 @@
 	  </li>
 	</ul>
 
-	<% if @user.id == current_user.id %>
+	<% if user_signed_in? && @user.id == current_user.id %>
 		<%= link_to "<i class='material-icons right'>edit</i>Edit Profile".html_safe, edit_user_registration_path, class: 'waves-effect waves-light btn' %>
 	<% end %>
 
