fixed styling onedit and delete links by changing them to icons

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -13,3 +13,13 @@
 		min-height: 200px;
 	}
 }
+
+.style_buttons{
+  float: right;
+  position: relative;
+  top: -162px;
+}
+
+.color_black{
+	color: black;
+}
