--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h2>Write a New Blog Post</h2>
 <div class="new_post_container">
 	<div class="new_post_form_wrapper">
 		<% if current_user.reputation >= 500 %>
