--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -136,14 +136,14 @@ pre {
 	top: 20%;
 	left: -7%;
 	width: 50px;
-	height: 130px;
+	height: 80px;
 	border-radius: 3px;
 	border: 2px solid black;
 }
 
 .upvote {
 	position: absolute;
-	top: 3%;
+	top: 5%;
 	left: 15%;
 	background: black;
 	width: 70%;
@@ -154,7 +154,7 @@ pre {
 
 .downvote {
 	position: absolute;
-	bottom: 30%;
+	bottom: 5%;
 	left: 15%;
 	background: black;
 	width: 70%;
@@ -164,18 +164,22 @@ pre {
 }
 
 .rep-value {
+	text-align: center;
 	position: absolute;
-	top: 30%;
-	left: 40%;
+	top: 37%;
+	left: 13%;
+	font-weight: bold;
 	color: black;
 	width: 70%;
 	height: 10px;
 }
 
 .rep-value-id {
+	text-align: center;
+	font-weight: bold;
 	position: absolute;
-	top: 30%;
-	left: 40%;
+	top: 37%;
+	left: 13%;
 	color: black;
 	width: 70%;
 	height: 10px;
