--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -24,7 +24,6 @@
 <ul id="tabs-swipe-demo" class="tabs">
   <li class="tab col s3"><a href="#test-swipe-1">Recently Asked</a></li>
   <li class="tab col s3"><a class="active" href="#test-swipe-2">Most Popular</a></li>
-  <li class="tab col s3"><a href="#test-swipe-3">Dumbest</a></li>
 </ul>
 <div id="test-swipe-1" class="col s12">
 	<h1>Recently Asked Questions</h1>
@@ -66,27 +65,27 @@
 </div>
 
 
-<div id="test-swipe-3" class="col s12">
+<!-- <div id="test-swipe-3" class="col s12">
 
 
 	<h1>Dumbest Questions</h1>
 
 
-	<% @questions.where('reputation < 0').order(reputation: :asc).each do |question| %>
+	<%# @questions.where('reputation < 0').order(reputation: :asc).each do |question| %>
 		<div class="questions">
 			<div class="row question">
-				<%= link_to question do %>
+				<%# link_to question do %>
 		  	<div class="col s10 offset-s1 index-card">
 		    	<div class="card hoverable">
-							<%= render question, full: true %>
+							<%# render question, full: true %>
 					</div>
 				</div>
-				<% end %>
+				<%# end %>
 			</div>
 		</div>
-	<% end %>
+	<%# end %>
 
-</div>
+</div> -->
 
 
 
