--- a/app/views/reputations/_reputation.html.erb
+++ b/app/views/reputations/_reputation.html.erb
@@ -14,10 +14,9 @@
 	<% if params[:id] %>
 		<% if user_signed_in? %>
 			
-			<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: true).exists?  %>
+			<% if current_user.reputations.where(reputatable_id: rep_object.id, rep_given: true).exists?  || rep_object.user == current_user %>
 				<div class="upvote"></div>
-			<% elsif rep_object.user == current_user %>
-				<div class="upvote"></div>
+
 			<% else %>
 				<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: true}), method: :post, remote: true do %>
 					<div class='upvote'></div>
@@ -26,9 +25,7 @@
 
 			<div class="rep-value" id="rep_value<%= rep_object.id %>"> <%= rep_object.reputation %> </div>
 
-			<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: false).exists?  %>
-				<div class="downvote"></div>
-			<% elsif rep_object.user == current_user %>
+			<% if current_user.reputations.where(reputatable_id: rep_object.id, rep_given: false).exists? || rep_object.user == current_user %>
 				<div class="downvote"></div>
 			<% else %>
 				<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: false}), method: :post, remote: true do %>
